--- a/proyecto001_prueba/src/app/app.component.html
+++ b/proyecto001_prueba/src/app/app.component.html
@@ -1,6 +1,20 @@
 <div>
   <p>Nombre del Empleado: {{nombre}}</p>
   <p>Edad: {{edad}}</p>
+  <p *ngIf="edad >= 18; else menor">Es mayor de edad</p>
+  <ng-template #menor><p>Es un menor de edad </p></ng-template>
+  <table border="1">
+    <thead>
+      <tr>
+        <th>Sueldos</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let sueldo of sueldos">
+        <td>{{sueldo}}</td>
+      </tr>
+    </tbody>
+  </table>
   <p>Los últimos 3 sueldos son: {{sueldos[0]}}, {{sueldos[1]}}, y {{sueldos[2]}}</p>
   <p>En los últimos 3 meses ha ganado: {{ultimos3Sueldos()}}</p>
   <p>{{esActivo()}}</p>
